# fantasy-multiplayer

./: .gitignore  CMakeLists.txt  client.cpp  main.cpp  readme.md  server.cpp  shared.hpp  slides.md
client/: CMakeLists.txt  game.cpp  game.hpp  main.cpp  network.cpp  network.hpp  renderer.cpp  renderer.hpp
server/: CMakeLists.txt  main.cpp  server.cpp  server.hpp
shared/: CMakeLists.txt  player.cpp  player.hpp  players.cpp  players.hpp
sprites/: licence.txt
